# WYM

WYM-main/: README.md  pyproject.toml
WYM-main/WYM_main/: Dockerfile  app.py
WYM-main/WYM_main/templates/: form.html  gateaux.html  index.html
monitoring/: pyproject.toml
monitoring/monitoring/: db_utils.py
stack/: docker-compose.yml  docker_compose.yml
wym-project/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
wym-project/monitoring/: Dockerfile  pyproject.toml  requirements.txt
wym-project/monitoring/monitoring/: dashboard.py
wym-project/wym_project/: app.py  database.ini  database.py  dataset.txt  db_utils.py  model_utils.py
wym-project/wym_project/templates/: about.html  contact.html  contacted.html  form.html  index.html  model.html  styl.css
