[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["samahAlradi <samah.al-radi@le-campus-numerique.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.12.2"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
